--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ notifications:
     on_failure: always
 
 before_install:
+ - chmod +x gradlew
  # Install NDK + openconnect build deps
  - sudo apt-get update -qq
  - sudo apt-get install -qq build-essential autoconf automake libtool groff expect ant
