--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
-language: android
+language: java
+jdk:
+  - oraclejdk7
+
+sudo: required
+
+before_install:
+ - chmod +x gradlew
+
+script:
+  - ./gradlew clean build -i --continue
 
 android:
   components:
